<resources>
    <string name="app_name">FindMyGym</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">YBB!</string>
    <string name="nav_header_subtitle">Go sign in, now!</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_map">Map</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_wallet">Wallet</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="map_querying_gym">Querying gym…</string>
    <string name="schedule_no_rev_found">No reservations</string>

    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="action_gym">Gym</string>
    <string name="action_logout">Logout</string>

    <!--    Gym activity-->
    <string name="gym_info"><b>Gym Info</b></string>
    <string name="gym_name">Name</string>
    <string name="gym_open_hrs">Open Hrs.</string>
    <string name="gym_avg_rate">Avg. Rating</string>
    <string name="gym_address">Address</string>
    <string name="gym_contact">Contact</string>
    <string name="gym_equipments"><b>Equipments</b></string>
    <string name="gym_personal_trainers"><b>Personal Trainers</b></string>
    <string name="gym_reviews"><b>Reviews</b></string>
    <string name="gym_write_review_hint">Leave a comment</string>
    <string name="gym_go_first_then_comment">You have to visit this gym first…</string>
    <string name="gym_post_review">Post</string>
    <string name="gym_review_posting">Posting…</string>
    <string name="gym_review_posted">Review posted!</string>
    <string name="gym_something_wrong">Oops! Something went wrong…</string>

    <string name="gym_info_tab">Info</string>
    <string name="gym_reservation_tab">Reservation</string>

    <string name="gym_today">Today\n%s</string>
    <string name="gym_tomorrow">Tomorrow\n%s</string>
    <string name="gym_select_day">Select a day</string>
    <string name="gym_timeslot">%s - %s</string>
    <string name="gym_time_from_to">-</string>
    <string name="gym_time_format_am">%d:%02d AM</string>
    <string name="gym_time_format_am_short">%d AM</string>
    <string name="gym_time_format_pm">%d:%02d PM</string>
    <string name="gym_time_format_pm_short">%d PM</string>
    <string name="gym_rate_format">%.1f</string>
    <string name="gym_date_format">dd/MM/yyyy</string>

    <string name="gym_rsv">Checkout</string>
    <string name="gym_confirm_rsv">Confirm reservation</string>
    <string name="gym_confirm_rsv_msg">%s, %s</string>
    <string name="gym_rsv_null_error">Error: reservation is null</string>
    <string name="gym_no_trainer_avail">No coach available in given time period</string>

    <string name="gym_reserve_success">Make reservation success</string>

    <string name="gym_start_time">Pick a start time</string>
    <string name="gym_end_time">Pick an end time</string>

    <string name="gym_image_description">Photo of this gym</string>
    <string name="gym_review_item_description">Avatar of the user who wrote this review</string>
    <string name="gym_trainer_image_description">Avatar of this personal trainer</string>
    <string name="gym_date_time_picker_icon_description">Date and time picker icon</string>

    <string name="gym_self_price">Gym price</string>
    <string name="gym_trainer_price">Coach Price</string>
    <string name="gym_tax_price">Tax</string>
    <string name="gym_total_price">Total</string>
    <string name="gym_money_fmt">$%.2f</string>
</resources>