<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/mobile_navigation"
        app:startDestination="@+id/nav_map">

    <fragment
            android:id="@+id/nav_map"
            android:name="comp5216.sydney.edu.au.findmygym.ui.map.MapFragment"
            android:label="@string/menu_map"
            tools:layout="@layout/fragment_map" />

    <fragment
            android:id="@+id/nav_schedule"
            android:name="comp5216.sydney.edu.au.findmygym.ui.schedule.ScheduleFragment"
            android:label="@string/menu_schedule"
            tools:layout="@layout/fragment_schedule" />

    <fragment
            android:id="@+id/nav_profile"
            android:name="comp5216.sydney.edu.au.findmygym.ui.profile.ProfileFragment"
            android:label="@string/menu_profile"
            tools:layout="@layout/fragment_profile" />

    <fragment
            android:id="@+id/nav_wallet"
            android:name="comp5216.sydney.edu.au.findmygym.ui.wallet.WalletFragment"
            android:label="@string/menu_wallet"
            tools:layout="@layout/fragment_wallet" />
</navigation>