<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_home"
                android:icon="@android:drawable/ic_menu_mapmode"
                android:title="@string/menu_map" />
        <item
                android:id="@+id/nav_schedule"
                android:icon="@android:drawable/ic_menu_my_calendar"
                android:title="@string/menu_schedule" />
        <item
                android:id="@+id/nav_profile"
                android:icon="@android:drawable/ic_menu_myplaces"
                android:title="@string/menu_profile" />
    </group>
</menu>