<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/gym"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.gym.GymFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/com_facebook_blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/baseline_arrow_back_36"
        app:titleTextColor="@color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/gym_name_big"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gym A"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:columnCount="3"
            android:orientation="horizontal"
            android:useDefaultMargins="true">

            <TextView
                android:id="@+id/gym_name_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0.33"
                android:text="@string/gym_name"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/gym_open_hrs_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0.34"
                android:text="@string/gym_open_hrs"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/gym_rating_label"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="0.33"
                android:text="@string/gym_avg_rate"
                android:textAlignment="center"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/gym_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_fill_color"
                    android:minWidth="72dp"
                    android:text="Gym A"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/gym_open_hrs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_fill_color"
                    android:minWidth="72dp"
                    android:text="9AM-6PM"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/gym_avg_rate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/round_fill_color"
                    android:minWidth="80dp"
                    android:text="5.0"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="18sp" />

            </LinearLayout>

            <TextView
                android:layout_marginTop="20dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/gym_address"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_marginTop="20dp"
                android:id="@+id/gym_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:textAlignment="center"
                android:layout_columnSpan="2"
                android:background="@drawable/round_fill_color"
                android:minWidth="80dp"
                android:text="blah Ave. blah Unit"
                android:textColor="#000000"
                android:textSize="18sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/gym_contact"
                android:textAlignment="center"
                android:textSize="18sp" />

            <TextView
                android:layout_marginTop="10dp"
                android:id="@+id/gym_contact"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="fill_horizontal"
                android:textAlignment="center"
                android:layout_columnSpan="2"
                android:background="@drawable/round_fill_color"
                android:minWidth="72dp"
                android:text="123456789"
                android:textColor="#000000"
                android:textSize="18sp" />
        </GridLayout>

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />


</LinearLayout>